Fix image full bleed for palm

--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -79,3 +79,4 @@ $font-colour: #3D3D3D;
 $colour-grey: #A2A2A2;
 $brand-colour: $brand-color;
 $large-padding: 50px;
+$small-padding: 30px;
