--- a/css/ui/_layout.scss
+++ b/css/ui/_layout.scss
@@ -12,7 +12,7 @@
 
   .gw {
     width: 100%;
-    padding: 30px;
+    padding: $small-padding;
     border-radius: 0;
   }
 }
